--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <header>
       <h1 class="titel">Star Trek - Quiz App</h1>
     </header>
+    <main>
+      <section class="card">
+        <h2>What is the name from Captian Kirk?</h2>
+      </section>
+    </main>
   </body>
 </html>
