--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
     <main>
       <section class="card">
         <h2>What is the name from Captian Kirk?</h2>
+        <button type="button" class="show">Show answer</button>
+        <ul class="cat">
+          <li><p class="cat1"># categorie 1</p></li>
+          <li><p class="cat2"># categorie 2</p></li>
+          <li><p class="cat3"># categorie 3</p></li>
+        </ul>
+        <section class="bookmark"></section>
+      </section>
+
+      <section class="card">
+        <h2>What is the name from Captian Kirk?</h2>
+        <button type="button" class="show">Show answer</button>
+        <ul class="cat">
+          <li><p class="cat1"># categorie 1</p></li>
+          <li><p class="cat2"># categorie 2</p></li>
+          <li><p class="cat3"># categorie 3</p></li>
+        </ul>
+        <section class="bookmark"></section>
+      </section>
+
+      <section class="card">
+        <h2>What is the name from Captian Kirk?</h2>
+        <button type="button" class="show">Show answer</button>
+        <ul class="cat">
+          <li><p class="cat1"># categorie 1</p></li>
+          <li><p class="cat2"># categorie 2</p></li>
+          <li><p class="cat3"># categorie 3</p></li>
+        </ul>
+        <section class="bookmark"></section>
       </section>
     </main>
   </body>
