--- a/index.html
+++ b/index.html
@@ -12,36 +12,55 @@
     </header>
     <main>
       <section class="card">
-        <h2>What is the name from Captian Kirk?</h2>
-        <button type="button" class="show">Show answer</button>
+        <h2>What is the first name from Captian Kirk?</h2>
+        <button type="button" class="show" aria-label="Show answer">
+          Show answer
+        </button>
         <ul class="cat">
           <li><p class="cat1"># categorie 1</p></li>
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark"></section>
+        <section class="bookmark" aria-label="bookmark"></section>
       </section>
 
       <section class="card">
-        <h2>What is the name from Captian Kirk?</h2>
-        <button type="button" class="show">Show answer</button>
+        <h2>What is a Tribble?</h2>
+        <button type="button" class="show" aria-label="Show answer">
+          Show answer
+        </button>
         <ul class="cat">
           <li><p class="cat1"># categorie 1</p></li>
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark"></section>
+        <section class="bookmark" aria-label="bookmark"></section>
       </section>
 
       <section class="card">
-        <h2>What is the name from Captian Kirk?</h2>
-        <button type="button" class="show">Show answer</button>
+        <h2>The first contact was with...?</h2>
+        <button type="button" class="show" aria-label="Show answer">
+          Show answer
+        </button>
         <ul class="cat">
           <li><p class="cat1"># categorie 1</p></li>
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark"></section>
+        <section class="bookmark" aria-label="bookmark"></section>
+      </section>
+
+      <section class="card">
+        <h2>Who is Lucutus from Borg??</h2>
+        <button type="button" class="show" aria-label="Show answer">
+          Show answer
+        </button>
+        <ul class="cat">
+          <li><p class="cat1"># categorie 1</p></li>
+          <li><p class="cat2"># categorie 2</p></li>
+          <li><p class="cat3"># categorie 3</p></li>
+        </ul>
+        <section class="bookmark" aria-label="bookmark"></section>
       </section>
     </main>
   </body>
