fixed the footer

--- a/index.html
+++ b/index.html
@@ -63,5 +63,26 @@
         <section class="bookmark" aria-label="bookmark"></section>
       </section>
     </main>
+    <footer>
+      <section>
+        <ul class="nav">
+          <li>
+            <a href="#">
+              <img src="img/star-trek-ogo.png" alt="star-trek-icon Home" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/star-trek-ogo.png" alt="star-trek-icon" />
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="img/star-trek-ogo.png" alt="star-trek-icon" />
+            </a>
+          </li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
