--- a/index.html
+++ b/index.html
@@ -66,19 +66,28 @@
     <footer>
       <section>
         <ul class="nav">
-          <li>
+          <li class="nacPic">
             <a href="#">
-              <img src="img/star-trek-ogo.png" alt="star-trek-icon Home" />
+              <img
+                src="https://cdn.iconscout.com/icon/premium/png-512-thumb/star-trek-4-626738.png?f=avif&w=256"
+                alt="star-trek-icon Home"
+              />
             </a>
           </li>
-          <li>
+          <li class="nacPic">
             <a href="#">
-              <img src="img/star-trek-ogo.png" alt="star-trek-icon" />
+              <img
+                src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
+                alt="star-trek-icon"
+              />
             </a>
           </li>
-          <li>
+          <li class="nacPic">
             <a href="#">
-              <img src="img/star-trek-ogo.png" alt="star-trek-icon" />
+              <img
+                src="https://cdn.iconscout.com/icon/premium/png-512-thumb/vulcan-3200337-2662247.png?f=avif&w=256"
+                alt="star-trek-icon"
+              />
             </a>
           </li>
         </ul>
