--- a/index.html
+++ b/index.html
@@ -71,22 +71,25 @@
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/star-trek-4-626738.png?f=avif&w=256"
                 alt="star-trek-icon Home"
+                title="Home"
               />
             </a>
           </li>
           <li class="nacPic">
-            <a href="#">
+            <a href="booksmarks.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
-                alt="star-trek-icon"
+                alt="Bookmark"
+                title="Bookmarks"
               />
             </a>
           </li>
           <li class="nacPic">
-            <a href="#">
+            <a href="profil.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/vulcan-3200337-2662247.png?f=avif&w=256"
-                alt="star-trek-icon"
+                alt="Profil"
+                title="Profil"
               />
             </a>
           </li>
