--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
       <section class="card">
-        <h2>What is the first name from Captian Kirk?</h2>
+        <h2>What is the first name from Captain Kirk?</h2>
         <button type="button" class="show" aria-label="Show answer">
           Show answer
         </button>
