--- a/bookmarks.html
+++ b/bookmarks.html
@@ -66,7 +66,7 @@
     <footer>
       <section>
         <ul class="nav">
-          <li class="nacPic">
+          <li>
             <a href="index.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/star-trek-4-626738.png?f=avif&w=256"
@@ -75,7 +75,7 @@
               />
             </a>
           </li>
-          <li class="nacPic">
+          <li class="aktiv">
             <a href="booksmarks.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
@@ -84,7 +84,7 @@
               />
             </a>
           </li>
-          <li class="nacPic">
+          <li>
             <a href="profile.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/vulcan-3200337-2662247.png?f=avif&w=256"
