add picture, text and switcher

--- a/profile.html
+++ b/profile.html
@@ -17,9 +17,24 @@
           src="https://cdn.pixabay.com/photo/2016/12/13/21/20/alien-1905155_640.png"
           alt="Profile picture"
         />
-
         <p>Bloxi Triximus</p>
       </section>
+
+      <section class="ProInfo">
+        <h2 class="ProAbout">About me:</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+          ipsum dolor sit amet.
+        </p>
+      </section>
+
+      <label class="switch">
+        <input type="checkbox" />
+        <span class="slider round"></span>
+      </label>
     </main>
     <footer>
       <section>
