--- a/profile.html
+++ b/profile.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star Trek Quiz App</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Star Trek - Quiz App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
       </section>
 
       <label class="switch">
-        <input type="checkbox" />
+        <input type="checkbox" aria-label="Switcher night mode" />
         <span class="slider round"></span>
       </label>
     </main>
