--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Trek Quiz App</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -17,9 +17,9 @@
           Show answer
         </button>
         <ul class="cat">
-          <li><p class="cat1"># categorie 1</p></li>
-          <li><p class="cat2"># categorie 2</p></li>
-          <li><p class="cat3"># categorie 3</p></li>
+          <li><p class="cat1"># Crew</p></li>
+          <li><p class="cat2"># Spaceships</p></li>
+          <li><p class="cat3"># Planets</p></li>
         </ul>
         <section class="bookmark" aria-label="bookmark"></section>
       </section>
