--- a/profile.html
+++ b/profile.html
@@ -11,13 +11,15 @@
       <h1 class="titel">Star Trek - Quiz App</h1>
     </header>
     <main>
-      <section class="profName">
-        <img
-          class="profPic"
-          src="https://cdn.pixabay.com/photo/2016/12/13/21/20/alien-1905155_640.png"
-          alt="Profile picture"
-        />
-        <p>Bloxi Triximus</p>
+      <section class="profPicName">
+        <div>
+          <img
+            class="profPic"
+            src="https://cdn.pixabay.com/photo/2016/12/13/21/20/alien-1905155_640.png"
+            alt="Profile picture"
+          />
+        </div>
+        <div><p class="profName">Bloxi Triximus</p></div>
       </section>
 
       <section class="ProInfo">
