--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
 
       <section class="ProInfo">
         <h2 class="ProAbout">About me:</h2>
-        <p>
+        <p class="aboutText">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
           nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
           sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
