add about me info

--- a/profile.html
+++ b/profile.html
@@ -34,6 +34,7 @@
       </section>
 
       <label class="switch">
+        <h2>Light mode:</h2>
         <input type="checkbox" aria-label="Switcher night mode" />
         <span class="slider round"></span>
       </label>
