add counter questtions and bookmark

--- a/profile.html
+++ b/profile.html
@@ -33,6 +33,23 @@
         </p>
       </section>
 
+      <section class="counters">
+        <div class="numCards">
+          <article class="cardSign">Questions</article>
+          <article><p>12</p></article>
+        </div>
+        <div class="numBookmarks">
+          <article class="bookmarkSign">
+            <img
+              src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
+              alt="Bookmark"
+              title="Bookmarks"
+            />
+          </article>
+          <article><p>9</p></article>
+        </div>
+      </section>
+
       <label class="switch">
         <h2>Light mode:</h2>
         <input type="checkbox" aria-label="Switcher night mode" />
