add tooltip for the bookmarks

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -21,7 +21,10 @@
           <li><p class="cat2"># Spaceships</p></li>
           <li><p class="cat3"># Planets</p></li>
         </ul>
-        <section class="bookmark" aria-label="bookmark"></section>
+        <section class="tooltip">
+          <section class="bookmark" aria-label="bookmark"></section>
+          <span class="tooltiptext">Click here to remove!</span>
+        </section>
       </section>
 
       <section class="card">
