--- a/profile.html
+++ b/profile.html
@@ -34,25 +34,26 @@
       </section>
 
       <section class="counters">
-        <div class="numCards">
-          <article class="cardSign">Questions</article>
-          <article class="countCards"><p>12</p></article>
-        </div>
-        <div class="numBookmarks">
-          <article class="bookmarkSign">
+        <section class="numCards">
+          <p class="cardImage">Questions</p>
+          <p class="countCards">12</p>
+        </section>
+        <section class="numBookmarks">
+          <p class="bookmarkSign">
             <img
               src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
               alt="Bookmark"
               title="Bookmarks"
             />
-          </article>
-          <article class="countBookmarks"><p>9</p></article>
-        </div>
+          </p>
+          <p class="countBookmarks">9</p>
+        </section>
       </section>
 
+      <section class="settings"><h2>Settings</h2></section>
+
       <section class="switcher">
-        <div class="settings"><h2>Settings</h2></div>
-        <div><h3>Light mode:</h3></div>
+        <section><h3>Light mode:</h3></section>
 
         <div class="fx-block">
           <div class="toggle">
