--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
           <li><p class="cat2"># Spaceships</p></li>
           <li><p class="cat3"># Planets</p></li>
         </ul>
-        <section class="bookmark" aria-label="bookmark"></section>
+
+        <section class="tooltip">
+          <section class="bookmark" aria-label="bookmark"></section>
+          <span class="tooltiptext">Click here if answered!</span>
+        </section>
       </section>
 
       <section class="card">
@@ -34,7 +38,10 @@
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark" aria-label="bookmark"></section>
+        <section class="tooltip">
+          <section class="bookmark" aria-label="bookmark"></section>
+          <span class="tooltiptext">Click here if answered!</span>
+        </section>
       </section>
 
       <section class="card">
@@ -47,7 +54,10 @@
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark" aria-label="bookmark"></section>
+        <section class="tooltip">
+          <section class="bookmark" aria-label="bookmark"></section>
+          <span class="tooltiptext">Click here if answered!</span>
+        </section>
       </section>
 
       <section class="card">
@@ -60,7 +70,10 @@
           <li><p class="cat2"># categorie 2</p></li>
           <li><p class="cat3"># categorie 3</p></li>
         </ul>
-        <section class="bookmark" aria-label="bookmark"></section>
+        <section class="tooltip">
+          <section class="bookmark" aria-label="bookmark"></section>
+          <span class="tooltiptext">Click here if answered!</span>
+        </section>
       </section>
     </main>
     <footer>
