replace colors with cstoms properties

--- a/profile.html
+++ b/profile.html
@@ -12,14 +12,14 @@
     </header>
     <main>
       <section class="profPicName">
-        <div>
+        <section>
           <img
             class="profPic"
             src="https://cdn.pixabay.com/photo/2016/12/13/21/20/alien-1905155_640.png"
             alt="Profile picture"
           />
-        </div>
-        <div><p class="profName">Bloxi Triximus</p></div>
+        </section>
+        <section><p class="profName">Bloxi Triximus</p></section>
       </section>
 
       <section class="ProInfo">
