design toggle button

--- a/profile.html
+++ b/profile.html
@@ -50,21 +50,15 @@
         </section>
       </section>
 
-      <section class="settings"><h2>Settings</h2></section>
-
-      <section class="switcher">
-        <section><h3>Light mode:</h3></section>
-
-        <div class="fx-block">
-          <div class="toggle">
-            <div>
-              <input type="checkbox" id="toggles" />
-              <div data-unchecked="On" data-checked="Off"></div>
-            </div>
-          </div>
-        </div>
+      <section class="settings">
+        <h2 class="settingText">Settings</h2>
+        <button type="button" class="toggleButton">
+          <h2>light/dark mode</h2>
+        </button>
       </section>
+      <h2>"live long and prosper 🖖"</h2>
     </main>
+
     <footer>
       <section>
         <ul class="nav">
