--- a/bookmarks.html
+++ b/bookmarks.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Trek Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -22,7 +23,7 @@
           <li><p class="cat3"># Planets</p></li>
         </ul>
         <section class="tooltip">
-          <section class="bookmark" aria-label="bookmark"></section>
+          <button class="bookmark" aria-label="bookmark"></button>
           <span class="tooltiptext">Click here to remove!</span>
         </section>
       </section>
@@ -79,11 +80,20 @@
             </a>
           </li>
           <li class="aktiv">
-            <a href="booksmarks.html">
+            <a href="bookmarks.html">
               <img
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
                 alt="Bookmark"
                 title="Bookmarks"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="form.html">
+              <img
+                src="https://cdn.iconscout.com/icon/premium/png-512-thumb/calendar-plus-6403588-5388028.png?f=avif&w=256"
+                alt="New question card"
+                title="New question card"
               />
             </a>
           </li>
