link with index.js

--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Star Trek - Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./js/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -77,6 +78,15 @@
                 src="https://cdn.iconscout.com/icon/premium/png-512-thumb/bookmark-check-6403578-5388118.png?f=avif&w=256"
                 alt="Bookmark"
                 title="Bookmarks"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="form.html">
+              <img
+                src="https://cdn.iconscout.com/icon/premium/png-512-thumb/calendar-plus-6403588-5388028.png?f=avif&w=256"
+                alt="New question card"
+                title="New question card"
               />
             </a>
           </li>
