--- a/profile.html
+++ b/profile.html
@@ -53,9 +53,7 @@
 
       <section class="settings">
         <h2 class="settingText">Settings</h2>
-        <button type="button" class="toggleButton">
-          <h2>light/dark mode</h2>
-        </button>
+        <button type="button" class="toggleButton">light/dark mode</button>
       </section>
       <h2>"live long and prosper 🖖"</h2>
     </main>
