create char counter

--- a/form.html
+++ b/form.html
@@ -19,28 +19,31 @@
         <textarea
           maxlength="150"
           class="newQuestion"
+          id="newQuestion"
           data-js="newQustion"
           name="newQuestion"
           rows="5"
           cols="33"
         >
         </textarea>
-
+        <p id="charCounterQuestion" data-js="charCounterQuestion">150/150</p>
         <label for="newAnswer"><h2>Your answer</h2></label>
         <textarea
           maxlength="150"
           class="newAnswer"
+          id="newAnswer"
           name="newAnswer"
           data-js="newAnswer"
           rows="5"
           cols="33"
         >
         </textarea>
-
+        <p id="charCounterAnswer" data-js="charCounterAnswer">150/150</p>
         <label for="categorie"><h2>Categorie</h2></label>
         <input
           type="text"
           class="categorie"
+          id="categorie"
           name="categorie"
           data-js="categorie"
         />
