add compoments folder

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="card">
         <h2>The first contact was with...?</h2>
-        <button type="button" class="show" aria-label="Show answer">
+        <button type="button" class="showButton" aria-label="Show answer">
           Show answer
         </button>
         <ul class="cat">
